workspace = { members = ["other"] }
[package]
name = "rust-e0119-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
other = { path = "other" }

[features]
crate-direct=[]
crate-systick=[]
other-direct=[]
other-systick=[]